--- a/Sources/DequeModule/CMakeLists.txt
+++ b/Sources/DequeModule/CMakeLists.txt
@@ -15,11 +15,12 @@ else()
     ${COLLECTIONS_DEQUE_SOURCES})
   target_link_libraries(DequeModule PRIVATE
     InternalCollectionsUtilities)
-  set_target_properties(DequeModule PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
   _install_target(DequeModule)
   set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS DequeModule)
+  
+  # Re-export InternalCollectionsUtilities so dependents can access it
+  swift_module_re_exports(DequeModule InternalCollectionsUtilities)
 endif()
 
 target_sources(${module_name} PRIVATE
