--- a/Sources/HeapModule/CMakeLists.txt
+++ b/Sources/HeapModule/CMakeLists.txt
@@ -15,11 +15,12 @@ else()
     ${COLLECTIONS_HEAP_SOURCES})
   target_link_libraries(HeapModule PRIVATE
     InternalCollectionsUtilities)
-  set_target_properties(HeapModule PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
   _install_target(HeapModule)
   set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS HeapModule)
+  
+  # Re-export InternalCollectionsUtilities so dependents can access it
+  swift_module_re_exports(HeapModule InternalCollectionsUtilities)
 endif()
 
 target_sources(${module_name} PRIVATE
