--- a/Sources/OrderedCollections/CMakeLists.txt
+++ b/Sources/OrderedCollections/CMakeLists.txt
@@ -15,11 +15,12 @@ else()
     ${COLLECTIONS_ORDERED_SOURCES})
   target_link_libraries(OrderedCollections PRIVATE
     InternalCollectionsUtilities)
-  set_target_properties(OrderedCollections PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
   _install_target(OrderedCollections)
   set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS OrderedCollections)
+  
+  # Re-export InternalCollectionsUtilities so dependents can access it
+  swift_module_re_exports(OrderedCollections InternalCollectionsUtilities)
 endif()
 
 target_sources(${module_name} PRIVATE
