--- a/Sources/RopeModule/CMakeLists.txt
+++ b/Sources/RopeModule/CMakeLists.txt
@@ -15,11 +15,12 @@ else()
     ${COLLECTIONS_ROPE_SOURCES})
   target_link_libraries(_RopeModule PRIVATE
     InternalCollectionsUtilities)
-  set_target_properties(_RopeModule PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
 
   _install_target(_RopeModule)
   set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS _RopeModule)
+  
+  # Re-export InternalCollectionsUtilities so dependents can access it
+  swift_module_re_exports(_RopeModule InternalCollectionsUtilities)
 endif()
 
 target_sources(${module_name} PRIVATE
