--- a/Xcode/Shared.xcconfig
+++ b/Xcode/Shared.xcconfig
@@ -2,7 +2,7 @@
 //
 // This source file is part of the Swift Collections open source project
 //
-// Copyright (c) 2023 - 2024 Apple Inc. and the Swift project authors
+// Copyright (c) 2023 - 2025 Apple Inc. and the Swift project authors
 // Licensed under Apache License v2.0 with Runtime Library Exception
 //
 // See https://swift.org/LICENSE.txt for license information
@@ -11,7 +11,23 @@
 
 SDKROOT = macosx
 
-SWIFT_VERSION = 5.5
+SWIFT_VERSION = 5.10 // FIXME: _modify accessors in RopeModule seem to be broken in Swift 6 mode
+
+OTHER_SWIFT_FLAGS = $(inherited) \
+  -enable-upcoming-feature MemberImportVisibility \
+  -enable-experimental-feature BuiltinModule \
+  -enable-experimental-feature Lifetimes \
+  -enable-experimental-feature InoutLifetimeDependence \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.0: macOS 10.14.4, iOS 12.2, watchOS 5.2, tvOS 12.2" \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.1: macOS 10.15, iOS 13.0, watchOS 6.0, tvOS 13.0" \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.6: macOS 12.3, iOS 15.4, watchOS 8.5, tvOS 15.4" \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.8: macOS 13.3, iOS 16.4, watchOS 9.4, tvOS 16.4" \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.9: macOS 14.0, iOS 17.0, watchOS 10.0, tvOS 17.0" \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.10: macOS 14.4, iOS 17.4, watchOS 10.4, tvOS 17.4, visionOS 1.1" \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 6.0: macOS 15.0, iOS 18.0, watchOS 11.0, tvOS 18.0, visionOS 2.0" \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 6.1: macOS 15.4, iOS 18.4, watchOS 11.4, tvOS 18.4, visionOS 2.4" \
+  -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 6.2: macOS 26.0, iOS 26.0, watchOS 26.0, tvOS 26.0, visionOS 26.0"
+
 ONLY_ACTIVE_ARCH[config=Debug] = YES
 
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) COLLECTIONS_SINGLE_MODULE
@@ -22,6 +38,8 @@ SWIFT_COMPILATION_MODE[config=Debug] = singlefile
 
 SWIFT_OPTIMIZATION_LEVEL[config=Release] = -O
 SWIFT_OPTIMIZATION_LEVEL[config=Debug] = -Onone
+
+
 
 ENABLE_USER_SCRIPT_SANDBOXING = YES
 
@@ -35,6 +53,8 @@ DEBUG_INFORMATION_FORMAT[config=Release] = dwarf-with-dsym
 DEBUG_INFORMATION_FORMAT[config=Debug] = dwarf
 
 ALWAYS_SEARCH_USER_PATHS = NO
+
+STRING_CATALOG_GENERATE_SYMBOLS = YES
 
 GCC_DYNAMIC_NO_PIC = NO
 GCC_NO_COMMON_BLOCKS = YES
