Add ContainersPreview module with `struct Box`

--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -54,6 +54,9 @@ else()
   add_subdirectory(Collections)
 endif()
 
+
+add_subdirectory(InternalCollectionsUtilities)
+add_subdirectory(ContainersPreview)
 if(NOT COLLECTIONS_FOUNDATION_TOOLCHAIN_MODULE)
   add_subdirectory(BitCollections)
   add_subdirectory(HashTreeCollections)
@@ -62,4 +65,3 @@ endif()
 add_subdirectory(DequeModule)
 add_subdirectory(OrderedCollections)
 add_subdirectory(RopeModule)
-add_subdirectory(InternalCollectionsUtilities)
