[ArrayModule] Add new module with RigidArray and DynamicArray

--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -58,6 +58,7 @@ endif()
 add_subdirectory(InternalCollectionsUtilities)
 add_subdirectory(ContainersPreview)
 if(NOT COLLECTIONS_FOUNDATION_TOOLCHAIN_MODULE)
+  add_subdirectory(ArrayModule)
   add_subdirectory(BitCollections)
   add_subdirectory(HashTreeCollections)
   add_subdirectory(HeapModule)
