--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,6 +14,7 @@ jobs:
       macos_exclude_xcode_versions: '[{"xcode_version": "16.0"}, {"xcode_version": "16.1"}]'
       enable_macos_checks: true
       enable_wasm_sdk_build: true
+      enable_embedded_wasm_sdk_build: true
 
   soundness:
     name: Soundness
