--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,7 +14,16 @@ jobs:
       macos_exclude_xcode_versions: '[{"xcode_version": "16.0"}, {"xcode_version": "16.1"}]'
       enable_macos_checks: true
       enable_wasm_sdk_build: true
+  
+  embedded-tests:
+    name: Test Embedded Swift
+    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
+    with:
+      enable_linux_checks: false
+      enable_macos_checks: false
+      enable_wasm_sdk_build: false
       enable_embedded_wasm_sdk_build: true
+      swift_flags: --target Collections
 
   soundness:
     name: Soundness
