--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,8 +15,8 @@ jobs:
       enable_macos_checks: true
       enable_wasm_sdk_build: true
 
-  embedded-tests:
-    name: Test Embedded Swift
+  embedded-swift:
+    name: Build with Embedded Swift
     uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
     with:
       enable_linux_checks: false
