--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,6 +14,8 @@ jobs:
       macos_exclude_xcode_versions: '[{"xcode_version": "16.0"}, {"xcode_version": "16.1"}]'
       enable_macos_checks: true
       enable_wasm_sdk_build: true
+      wasm_sdk_build_command: |
+        swift build --build-tests && wasmkit run --dir .build --dir / .build/release/swift-collectionsPackageTests.xctest
 
   embedded-swift:
     name: Build with Embedded Swift
