Add "trailing elements" module with facilities for tail-allocated storage
Introduce new types `IntrusiveManagedBuffer` and `PaddedStorage` that
consist of a fixed-sized header followed by variable-sized storage. The
design of these types is inspired by the existing `ManagedBuffer` type
in the standard library, but has been adjusted both to make them
non-copyable and to eliminate the requirement for heap allocation.

--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -62,6 +62,7 @@ if(NOT COLLECTIONS_FOUNDATION_TOOLCHAIN_MODULE)
   add_subdirectory(BitCollections)
   add_subdirectory(HashTreeCollections)
   add_subdirectory(HeapModule)
+  add_subdirectory(TrailingElementsModule)
 endif()
 add_subdirectory(DequeModule)
 add_subdirectory(OrderedCollections)
