RigidArray/UniqueArray: Final API cleanup pass
- Set availability to match Span availability
- Split implementation into multiple source files
- Add OutputSpan-based primitives that can be the bases of all append/insertion/replaceSubrange variants
- Add the ability to consume a subrange of items using an InputSpan
- Add bulk copying operations generic over the new Container protocol

--- a/Sources/BasicContainers/CMakeLists.txt
+++ b/Sources/BasicContainers/CMakeLists.txt
@@ -23,8 +23,18 @@ else()
 endif()
 
 target_sources(${module_name} PRIVATE
-  "UniqueArray.swift"
-  "UniqueArray+Experimental.swift"
   "RigidArray.swift"
+  "RigidArray+Append.swift"
   "RigidArray+Experimental.swift"
+  "RigidArray+Initializers.swift"
+  "RigidArray+Insertions.swift"
+  "RigidArray+Removals.swift"
+  "RigidArray+Replacements.swift"
+  "UniqueArray.swift"
+  "UniqueArray+Append.swift"
+  "UniqueArray+Experimental.swift"
+  "UniqueArray+Initializers.swift"
+  "UniqueArray+Insertions.swift"
+  "UniqueArray+Removals.swift"
+  "UniqueArray+Replacements.swift"
 )
