--- a/Xcode/Shared.xcconfig
+++ b/Xcode/Shared.xcconfig
@@ -18,6 +18,7 @@ OTHER_SWIFT_FLAGS = $(inherited) \
   -enable-experimental-feature BuiltinModule \
   -enable-experimental-feature Lifetimes \
   -enable-experimental-feature InoutLifetimeDependence \
+  -enable-experimental-feature SuppressedAssociatedTypes \
   -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.0: macOS 10.14.4, iOS 12.2, watchOS 5.2, tvOS 12.2" \
   -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.1: macOS 10.15, iOS 13.0, watchOS 6.0, tvOS 13.0" \
   -enable-experimental-feature "AvailabilityMacro=SwiftStdlib 5.6: macOS 12.3, iOS 15.4, watchOS 8.5, tvOS 15.4" \
