--- a/Xcode/Collections.xcconfig
+++ b/Xcode/Collections.xcconfig
@@ -2,7 +2,7 @@
 //
 // This source file is part of the Swift Collections open source project
 //
-// Copyright (c) 2023 - 2024 Apple Inc. and the Swift project authors
+// Copyright (c) 2023 - 2025 Apple Inc. and the Swift project authors
 // Licensed under Apache License v2.0 with Runtime Library Exception
 //
 // See https://swift.org/LICENSE.txt for license information
@@ -14,6 +14,9 @@ PRODUCT_BUNDLE_IDENTIFIER = org.swift.Collections
 
 SUPPORTED_PLATFORMS = macosx iphoneos iphonesimulator watchos watchsimulator appletvos appletvsimulator
 ARCHS = $(ARCHS_STANDARD)
+
+OTHER_SWIFT_FLAGS = $(inherited) \
+  -package-name CollectionsInternal
 
 MACOSX_DEPLOYMENT_TARGET = 12.0
 IPHONEOS_DEPLOYMENT_TARGET = 15.0
