--- a/Sources/Collections/CMakeLists.txt
+++ b/Sources/Collections/CMakeLists.txt
@@ -9,7 +9,7 @@ See https://swift.org/LICENSE.txt for license information
 
 add_library(Collections
     "Collections.swift")
-target_link_libraries(Collections PRIVATE
+target_link_libraries(Collections PUBLIC
   BitCollections
   DequeModule
   HeapModule
