--- a/Sources/TrailingElementsModule/CMakeLists.txt
+++ b/Sources/TrailingElementsModule/CMakeLists.txt
@@ -15,6 +15,9 @@ else()
 
   _install_target(TrailingElementsModule)
   set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS TrailingElementsModule)
+
+  # Re-export InternalCollectionsUtilities so dependents can access it
+  swift_module_re_exports(TrailingElementsModule InternalCollectionsUtilities)
 endif()
 
 target_sources(${module_name} PRIVATE
