Enable the test suite for Wasm
We should use `swift test` as `wasm_sdk_build_command` in `pull_request.yml` to actually run the tests. Previously only the library itself was built, but not tested.

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,6 +17,7 @@ jobs:
       macos_exclude_xcode_versions: '[{"xcode_version": "26.0"}]'
       enable_macos_checks: true
       enable_wasm_sdk_build: true
+      wasm_sdk_build_command: 'swift test'
 
   embedded-swift:
     name: Build with Embedded Swift
