--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,8 +10,7 @@ on:
 jobs:
   tests:
     name: Test
-    #uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
-    uses: swift-android-sdk/github-workflows/.github/workflows/swift_package_test.yml@android-sleep-before-adb
+    uses: swiftlang/github-workflows/.github/workflows/swift_package_test.yml@main
     with:
       linux_exclude_swift_versions: '[{"swift_version": "5.8"}, {"swift_version": "5.9"}, {"swift_version": "5.10"}]'
       windows_exclude_swift_versions: '[{"swift_version": "5.9"}, {"swift_version": "5.10"}]'
