--- a/Sources/InternalCollectionsUtilities/CMakeLists.txt
+++ b/Sources/InternalCollectionsUtilities/CMakeLists.txt
@@ -25,10 +25,11 @@ target_sources(${module_name} PRIVATE
   "Descriptions.swift"
   "LifetimeOverride.swift"
   "RandomAccessCollection+Offsets.swift"
+  "Span+Extras.swift"
   "UnsafeBufferPointer+Extras.swift"
   "UnsafeMutableBufferPointer+Extras.swift"
-  "UnsafeRawBufferPointer+Extras.swift"
   "UnsafeMutableRawBufferPointer+Extras.swift"
+  "UnsafeRawBufferPointer+Extras.swift"
   "IntegerTricks/FixedWidthInteger+roundUpToPowerOfTwo.swift"
   "IntegerTricks/Integer rank.swift"
   "IntegerTricks/UInt+first and last set bit.swift"
