Update Xcode project

--- a/Xcode/Shared.xcconfig
+++ b/Xcode/Shared.xcconfig
@@ -33,7 +33,7 @@ OTHER_SWIFT_FLAGS = $(inherited) \
 ONLY_ACTIVE_ARCH[config=Debug] = YES
 
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) COLLECTIONS_SINGLE_MODULE
-SWIFT_ACTIVE_COMPILATION_CONDITIONS[config=Debug] = $(inherited) COLLECTIONS_INTERNAL_CHECKS DEBUG
+SWIFT_ACTIVE_COMPILATION_CONDITIONS[config=Debug] = $(inherited) DEBUG //COLLECTIONS_INTERNAL_CHECKS
 
 SWIFT_COMPILATION_MODE[config=Release] = wholemodule
 SWIFT_COMPILATION_MODE[config=Debug] = singlefile
