Stop using `@_exported import`
- Stop using unstable import attributes with undefined/flaky semantics in package contexts.
- Freeze the contents of the Collections module. Do not make the new RigidDeque/UniqueDeque types from there, at least not yet. Replace reexported types with typealiases, and reexported protocol extensions with redefinitions forwarding to a common implementation in the original module.

--- a/Sources/Collections/CMakeLists.txt
+++ b/Sources/Collections/CMakeLists.txt
@@ -1,20 +1,24 @@
 #[[
 This source file is part of the Swift Collections Open Source Project
 
-Copyright (c) 2021 - 2024 Apple Inc. and the Swift project authors
+Copyright (c) 2021 - 2026 Apple Inc. and the Swift project authors
 Licensed under Apache License v2.0 with Runtime Library Exception
 
 See https://swift.org/LICENSE.txt for license information
 #]]
 
 add_library(Collections
-    "Collections.swift")
+    "BitCollections reexports.swift"
+    "DequeModule reexports.swift"
+    "HashTreeCollections reexports.swift"
+    "HeapModule reexports.swift"
+    "OrderedCollections reexports.swift")
 target_link_libraries(Collections PRIVATE
   BitCollections
   DequeModule
+  HashTreeCollections
   HeapModule
   OrderedCollections
-  HashTreeCollections
   )
 set_target_properties(Collections PROPERTIES
   INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})
