[BasicContainers] Move array implementations into subdirectories
(This sets the stage for more data structures in BasicContainers)

--- a/Sources/BasicContainers/CMakeLists.txt
+++ b/Sources/BasicContainers/CMakeLists.txt
@@ -23,19 +23,19 @@ else()
 endif()
 
 target_sources(${module_name} PRIVATE
-  "RigidArray.swift"
-  "RigidArray+Append.swift"
-  "RigidArray+Container.swift"
-  "RigidArray+Experimental.swift"
-  "RigidArray+Initializers.swift"
-  "RigidArray+Insertions.swift"
-  "RigidArray+Removals.swift"
-  "RigidArray+Replacements.swift"
-  "UniqueArray.swift"
-  "UniqueArray+Append.swift"
-  "UniqueArray+Experimental.swift"
-  "UniqueArray+Initializers.swift"
-  "UniqueArray+Insertions.swift"
-  "UniqueArray+Removals.swift"
-  "UniqueArray+Replacements.swift"
+  "RigidArray/RigidArray.swift"
+  "RigidArray/RigidArray+Append.swift"
+  "RigidArray/RigidArray+Container.swift"
+  "RigidArray/RigidArray+Experimental.swift"
+  "RigidArray/RigidArray+Initializers.swift"
+  "RigidArray/RigidArray+Insertions.swift"
+  "RigidArray/RigidArray+Removals.swift"
+  "RigidArray/RigidArray+Replacements.swift"
+  "UniqueArray/UniqueArray.swift"
+  "UniqueArray/UniqueArray+Append.swift"
+  "UniqueArray/UniqueArray+Experimental.swift"
+  "UniqueArray/UniqueArray+Initializers.swift"
+  "UniqueArray/UniqueArray+Insertions.swift"
+  "UniqueArray/UniqueArray+Removals.swift"
+  "UniqueArray/UniqueArray+Replacements.swift"
 )
