--- a/Sources/DequeModule/CMakeLists.txt
+++ b/Sources/DequeModule/CMakeLists.txt
@@ -31,7 +31,10 @@ target_sources(${module_name} PRIVATE
   "RigidDeque/RigidDeque+Append.swift"
   "RigidDeque/RigidDeque+Consumption.swift"
   "RigidDeque/RigidDeque+Container.swift"
+  "RigidDeque/RigidDeque+Descriptions.swift"
+  "RigidDeque/RigidDeque+Equatable.swift"
   "RigidDeque/RigidDeque+Experimental.swift"
+  "RigidDeque/RigidDeque+Hashable.swift"
   "RigidDeque/RigidDeque+Initializers.swift"
   "RigidDeque/RigidDeque+Insertions.swift"
   "RigidDeque/RigidDeque+Prepend.swift"
@@ -42,7 +45,10 @@ target_sources(${module_name} PRIVATE
   "UniqueDeque/UniqueDeque+Append.swift"
   "UniqueDeque/UniqueDeque+Consumption.swift"
   "UniqueDeque/UniqueDeque+Container.swift"
+  "UniqueDeque/UniqueDeque+Descriptions.swift"
+  "UniqueDeque/UniqueDeque+Equatable.swift"
   "UniqueDeque/UniqueDeque+Experimental.swift"
+  "UniqueDeque/UniqueDeque+Hashable.swift"
   "UniqueDeque/UniqueDeque+Initializers.swift"
   "UniqueDeque/UniqueDeque+Insertions.swift"
   "UniqueDeque/UniqueDeque+Prepend.swift"
