`replaceSubrange(_:...)` → `replace(removing:...)`

--- a/Sources/BasicContainers/CMakeLists.txt
+++ b/Sources/BasicContainers/CMakeLists.txt
@@ -27,6 +27,7 @@ target_sources(${module_name} PRIVATE
   "RigidArray/RigidArray+Append.swift"
   "RigidArray/RigidArray+Consumption.swift"
   "RigidArray/RigidArray+Container.swift"
+  "RigidArray/RigidArray+Deprecated.swift"
   "RigidArray/RigidArray+Descriptions.swift"
   "RigidArray/RigidArray+Equatable.swift"
   "RigidArray/RigidArray+Experimental.swift"
@@ -39,6 +40,7 @@ target_sources(${module_name} PRIVATE
   "UniqueArray/UniqueArray+Append.swift"
   "UniqueArray/UniqueArray+Consumption.swift"
   "UniqueArray/UniqueArray+Container.swift"
+  "UniqueArray/UniqueArray+Deprecated.swift"
   "UniqueArray/UniqueArray+Descriptions.swift"
   "UniqueArray/UniqueArray+Equatable.swift"
   "UniqueArray/UniqueArray+Experimental.swift"
