[BasicContainers] Add early drafts for RigidSet/RigidDictionary

--- a/Sources/BasicContainers/CMakeLists.txt
+++ b/Sources/BasicContainers/CMakeLists.txt
@@ -49,4 +49,16 @@ target_sources(${module_name} PRIVATE
   "UniqueArray/UniqueArray+Insertions.swift"
   "UniqueArray/UniqueArray+Removals.swift"
   "UniqueArray/UniqueArray+Replacements.swift"
+  "HashTable/ProtocolGeneralizations.swift"
+  "HashTable/_HTable.swift"
+  "HashTable/_HTable+Bitmap.swift"
+  "HashTable/_HTable+Bucket.swift"
+  "HashTable/_HTable+Constants.swift"
+  "HashTable/_HTable+Find.swift"
+  "HashTable/_HTable+Insert.swift"
+  "HashTable/_HTable+Iteration.swift"
+  "HashTable/_HTable+Small.swift"
+  "HashTable/_HTable+Debugging.swift"
+  "RigidSet/RigidSet.swift"
+  "RigidDictionary/RigidDictionary.swift"
 )
