[BasicContainers] Add UniqueSet

--- a/Sources/BasicContainers/CMakeLists.txt
+++ b/Sources/BasicContainers/CMakeLists.txt
@@ -53,12 +53,26 @@ target_sources(${module_name} PRIVATE
   "HashTable/_HTable.swift"
   "HashTable/_HTable+Bitmap.swift"
   "HashTable/_HTable+Bucket.swift"
-  "HashTable/_HTable+Constants.swift"
+  "HashTable/_HTable+Sizing.swift"
   "HashTable/_HTable+Find.swift"
   "HashTable/_HTable+Insert.swift"
   "HashTable/_HTable+Iteration.swift"
   "HashTable/_HTable+Small.swift"
   "HashTable/_HTable+Debugging.swift"
   "RigidSet/RigidSet.swift"
-  "RigidDictionary/RigidDictionary.swift"
+  "RigidSet/RigidSet+BorrowingSequence.swift"
+  "RigidSet/RigidSet+Consumption.swift"
+  "RigidSet/RigidSet+Debugging.swift"
+  "RigidSet/RigidSet+Initializers.swift"
+  "RigidSet/RigidSet+Insertions.swift"
+  "RigidSet/RigidSet+Lookup.swift"
+  "RigidSet/RigidSet+Resizing.swift"
+  "UniqueSet/UniqueSet.swift"
+  "UniqueSet/UniqueSet+BorrowingSequence.swift"
+  "UniqueSet/UniqueSet+Consumption.swift"
+  "UniqueSet/UniqueSet+Debugging.swift"
+  "UniqueSet/UniqueSet+Initializers.swift"
+  "UniqueSet/UniqueSet+Insertions.swift"
+  "UniqueSet/UniqueSet+Lookup.swift"
+  "UniqueSet/UniqueSet+Resizing.swift"
 )
